add images from the list for check the article

--- a/reto1/index.html
+++ b/reto1/index.html
@@ -16,10 +16,12 @@
             </li>
             <ol>
                 <li>
-                    <a href="https://www.google.com/search?q=manzana+recetas&oq=manzana+rece&aqs=chrome.0.0j69i57j0l6.5451j0j7&sourceid=chrome&ie=UTF-8" target="_blanck">Manzana 🍎</a>
+                    <a href="https://www.youtube.com/results?search_query=receta+con+manzana" target="_blanck">Manzana 🍎</a>
+                    <figure><img src="./images/greenApple.jpg" alt="Esta es una imagen de una manzana verde" width="100px"></figure>
                 </li>
                 <li>
-                    <a href="https://www.google.com/search?q=recetas+platano&oq=recetas+platano&aqs=chrome..0j69i57j0l6.5825j0j9&sourceid=chrome&ie=UTF-8" target="_blanck">Platano 🍌</a>
+                    <a href="https://www.youtube.com/results?search_query=receta+con+platano" target="_blanck">Platano 🍌</a>
+                    <figure><img src="./images/banana.jpg" alt="Esta es una imagen de una banana" width="100px"></figure>
                 </li>
             </ol>
             <li>
@@ -27,10 +29,12 @@
             </li>
             <ol>
                 <li>
-                    <a href="https://www.google.com/search?sxsrf=ALeKk00XV7wXMQhQla8OTmGhysigoZJQ7g%3A1600374043521&ei=G8VjX7ShH4Kd5wK3k4GgCw&q=recetas+pollo&oq=recetas+pollo&gs_lcp=CgZwc3ktYWIQAzICCAAyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEEc6BAgjECc6BwgAEBQQhwI6BAgAEEM6BQgAELEDOgUILhCxA1DDjAJY5J0CYKifAmgBcAF4AIABhQGIAfQIkgEDNS42mAEAoAEBqgEHZ3dzLXdpesgBCMABAQ&sclient=psy-ab&ved=0ahUKEwj0mvzygfHrAhWCzlkKHbdJALQQ4dUDCA0&uact=5" target="_blanck">Pollo 🐔</a> 
+                    <a href="https://www.youtube.com/results?search_query=receta+con+pollo" target="_blanck">Pollo 🐔</a> 
+                    <figure><img src="./images/chiken.jpg" alt="Esta es una imagen de un pollo frito" width="100px"></figure>
                 </li>
                 <li>
-                    <a href="https://www.google.com/search?sxsrf=ALeKk021NhjgoyeAjlAI-L7l0UrtqboPUA%3A1600374081300&ei=QcVjX6DKEcKP5wLMz7ngCQ&q=recetas+carne+molida&oq=recetas+carne+molida&gs_lcp=CgZwc3ktYWIQAzICCAAyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEEc6BAgjECc6BAgAEEM6BQgAELEDOgUILhCxAzoKCAAQsQMQFBCHAjoHCAAQFBCHAlC2lQFYk64BYMSvAWgAcAF4AIABugGIAc4OkgEDOS44mAEAoAEBqgEHZ3dzLXdpesgBCMABAQ&sclient=psy-ab&ved=0ahUKEwjg7v2EgvHrAhXCx1kKHcxnDpwQ4dUDCA0&uact=5" target="_blanck">Carne molida 🍖</a> 
+                    <a href="https://www.youtube.com/results?search_query=receta+con+carne+molida" target="_blanck">Carne molida 🍖</a>
+                    <figure><img src="./images/meat.jpg" alt="Esta es una imagen de carne molida" width="100px"></figure> 
                 </li>
             </ol>
             <li>
@@ -38,10 +42,12 @@
             </li>
             <ol>
                 <li>
-                    <a href="https://www.google.com/search?sxsrf=ALeKk03K0fZy9O6icDwUVKbuktqNhiWSTw%3A1600374104892&ei=WMVjX5WBNsPP5gKQ8KeICg&q=recetas+limon&oq=recetas+limon&gs_lcp=CgZwc3ktYWIQAzICCAAyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BAgAEEc6BAgjECc6BAgAEEM6CggAELEDEBQQhwI6BQgAELEDOgcIABAUEIcCUK2IAVi5kQFg9pIBaABwAXgAgAF9iAH-BZIBAzAuN5gBAKABAaoBB2d3cy13aXrIAQjAAQE&sclient=psy-ab&ved=0ahUKEwiVjZ6QgvHrAhXDp1kKHRD4CaEQ4dUDCA0&uact=5" target="_blanck">Limón 🍋</a>
+                    <a href="https://www.youtube.com/results?search_query=receta+con+limon" target="_blanck">Limón 🍋</a>
+                    <figure><img src="./images/lemon.jpg" alt="Esta es una imagen de un limon" width="100px"></figure>
                 </li>
                 <li>
-                    <a href="https://www.google.com/search?sxsrf=ALeKk0096E3DNhQHkhdvXNB1GD6XJA6_Wg%3A1600374124830&ei=bMVjX6KVMoHz5gLtwL_oDg&q=recetas+zanahoria&oq=recetas+zanah&gs_lcp=CgZwc3ktYWIQAxgAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADoECAAQRzoECCMQJzoHCAAQFBCHAjoFCAAQsQM6CggAELEDEBQQhwJQqn9YpZMBYMyaAWgAcAF4AIABcogBjgiSAQMzLjeYAQCgAQGqAQdnd3Mtd2l6yAEIwAEB&sclient=psy-ab" target="_blanck">Zanahoria 🍛</a>
+                    <a href="https://www.youtube.com/results?search_query=receta+con+zanahoria+" target="_blanck">Zanahoria 🍛</a>
+                    <figure><img src="./images/zanahoria.jpg" alt="Esta es una imagen de una zanahoria" width="100px"></figure>
                 </li>
             </ol>
         </ul>
