--- a/reto1/index.html
+++ b/reto1/index.html
@@ -50,6 +50,12 @@
                     <figure><img src="./images/zanahoria.jpg" alt="Esta es una imagen de una zanahoria" width="100px"></figure>
                 </li>
             </ol>
+            <li>
+                Video
+            </li>
+            <video controls preload="auto">
+                <source src="./images/video.mp4#t=5,20">
+            </video>
         </ul>
     </body>
 </html>
