--- a/reto2/index.html
+++ b/reto2/index.html
@@ -82,7 +82,7 @@
                 <span>Codigo postal</span>
                 <input type="number" name="cp" id="cp" placeholder="85642" autocomplete="postal-code" required>
             </label>
-            <input type="submit">
+            <button type="submit">Enviar</button>
         </form>
     </body>
 </html>
