add more styles on challenge one

--- a/reto1/index.html
+++ b/reto1/index.html
@@ -6,6 +6,7 @@
         <meta name="robots" content="index,follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/style.css ">
+        <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400;0,600;1,500&display=swap" rel="stylesheet">
         <title>Document</title>
     </head>
     <body>
