make challenge four for postions

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./reto4/css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./reto4/css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@400;500;600&display=swap" rel="stylesheet">
+        <title>Pokemon</title>
+    </head>
+    <body>
+        <main class="pikachu">
+            <figure class="pikachu-image">
+                <div class="pikachu-name">
+                    <p>Pikachu</p>
+                </div>
+                <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png" alt="Imagen de picachu">
+            </figure>
+            <section class="pikachu-description">
+                <p>Cuanto más potente es la energía eléctrica que genera este Pokémon, más suaves y elásticas se vuelven las bolsas de sus mejillas.</p>
+                <div class="pikhachu-description___habilidades">
+                    <p>
+                        Tipo
+                    </p>
+                    <div>
+                        <p>Eléctrico</p>
+                    </div>
+                </div>
+                <div class="pikachu-description___debilidades">
+                    <p>
+                        Debilidad
+                    </p>
+                    <div>
+                        <p>Tierra</p>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
